--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <hr>
 
     <footer class="header-footer-container">
-        Copyright (C) 2024 Adhitya Bonor Immanuel Immanuel
+        Copyright (C) 2024 Adhitya Bonor Immanuel Sitompul
     </footer>
  
 </hr>
